--- a/server/configuration.html
+++ b/server/configuration.html
@@ -13,7 +13,7 @@
             <input type="text" id="departure" name="departure" placeholder="Enter the departure place" />
 
             <label for="destination">Destination:</label>
-            <input type="destination" id="destination" placeholder="Enter the destination place" />
+            <input type="text" id="destination" name="destination" placeholder="Enter the destination place" />
 
             <input type="submit" value="Save" />
 
