--- a/server/configuration.html
+++ b/server/configuration.html
@@ -9,6 +9,9 @@
     <h1>Configure your favourite itinerary</h1>
     <form action="http://127.0.0.1:8080/itineraryPrefs" method="post">
         <fieldset>
+            <label for="id">Your id:</label>
+            <input type="text" id="id" name="id" placeholder="Find your id behind the mirror" />
+
             <label for="departure">Departure:</label>
             <input type="text" id="departure" name="departure" placeholder="Enter the departure place" />
 
